--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,9 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Project specific settings
+/FW/appsettings.json
+
+# Normally would exclude browser driver directory but in this instance
+# /_drivers
